<resources>
    <string name="app_name">WeatherNow</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="channel_name">WeatherNow Notifications</string>
    <string name="channel_description">Weather notifications and updates</string>
    <string name="login">Login</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="already_have_an_account_click_here">Already have an account? Click here</string>
    <string name="sign_up">Sign Up</string>
    <string name="city_name">City Name</string>
    <string name="_25_c">25°C</string>
    <string name="clear_sky">Clear sky</string>
    <string name="search">Search</string>
    <string name="login2">Login</string>
    <string name="don_t_have_an_account_click_here">Don\'t have an account? Click here</string>
    <string name="password2">Password</string>
    <string name="email2">Email</string>
    <string name="welcome">Welcome!</string>
    <string name="weathernow_app">WeatherNow App</string>
    <string name="search2">Search</string>
    <string name="save_profile">Save Profile</string>
    <string name="surname2">Surname</string>
    <string name="first_name">First Name</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="change_picture">Change Picture</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="search3">Search</string>
    <string name="notifications">Notifications</string>
    <string name="default_web_client_id">74070462690-tqbfm96s1avj2d9oisp4q3fmi01mag1g.apps.googleusercontent.com</string>
    <string name="Afrikaans">Afrikaans</string>
    <string name="Zulu">Zulu</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="switch_to_toggle_dark_mode">Switch to toggle dark mode</string>
    <string name="weather_notifications">Weather Notifications</string>
    <string name="switch_to_toggle_notification">Switch to toggle notification</string>
    <string name="select_temperature_unit">Select Temperature Unit</string>
    <string name="language">Language</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="login_using_biometrics">Login using Biometrics</string>
    <string name="back_home">Back Home</string>
    <string name="logout">Logout</string>
    <string name="English">English</string>
</resources>