<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These items are shown before login -->
    <item
        android:id="@+id/nav_sign_up"
        android:title="@string/sign_up"
        android:icon="@drawable/ic_sign_up"
        android:visible="true" />

    <item
        android:id="@+id/nav_login"
        android:title="@string/login"
        android:icon="@drawable/ic_login"
        android:visible="true" />

    <!-- These items will be shown after login -->
    <item
        android:id="@+id/nav_edit_profile"
        android:title="@string/edit_profile"
        android:icon="@drawable/ic_edit"
        android:visible="false" />

    <!-- Always visible, for both logged-in and anonymous users -->
    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings" />

    <!-- Logout item, shown after login -->
    <item
        android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        android:visible="false" />
</menu>
